# mem01session

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: prepared-input-scaling.json
docs/superpowers/plans/: 2026-07-13-mem01session-embedded-redesign.md  2026-07-13-mem01session-lifecycle-hardening.md
examples/: __init__.py  build_week_demo.py
scripts/: prepare_offline_wheelhouse.py
src/mem01session/: __init__.py  demo.py  items.py  memory_block.py  metrics.py  runtime.py  session.py
src/mem01session/fixtures/: build_week_conversations.json
tests/: fakes.py  test_demo.py  test_items.py  test_memory_block.py  test_metrics.py  test_packaging.py  test_runner_integration.py  test_runtime.py  test_session.py  test_session_semantics.py
