[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mem01session"
version = "0.1.2"
description = "Embedded long-term memory sessions for the OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "mem01 contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "mem01-engine[openai]>=0.1.0",
  "openai-agents~=0.18.2",
]

[project.scripts]
mem01session-demo = "mem01session.demo:main"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mem01session"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mem01session"]

[[tool.mypy.overrides]]
module = ["mem01", "mem01.*"]
follow_untyped_imports = true
